hudhud-kubernetes-config/clusters/staging/hudhud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hudhud
  labels:
    prometheus: enabled
