hudhud-kubernetes-config/clusters/staging/hudhud/api-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: api
  namespace: hudhud
spec:
  selector:
    component: api
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
